#1 fixing issues found by errorprone